@@ -6,6 +6,7 @@
 * Fix Padrino::Application#run! (now correctly accepts options)
 * Fix Padrino::Server (now has correct defaults options)
 * Fix Padrino::Reloader with strange constants or paths #565
+* Fix Padrino::Reloader reloading also $LOADED_FEATURES deps
 
 == 0.9.29
 
